--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,13 @@
 			<version>2.0.1</version>
 		</dependency>
 		
+		<!-- util -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
+		
 		<!-- DB -->
 		<!-- Database connection pool 
 		See here for more details on commons-dbcp versus tomcat-jdbc: 
