--- a/src/main/resources/properties/dummy.properties
+++ b/src/main/resources/properties/dummy.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://10.99.197.7:13306/doplee_test
-jdbc.username=tts_db
-jdbc.password=tts_db
+jdbc.url=jdbc:mysql://10.10.10.10:0000/dbname?Unicode=true&amp;characterEncoding=UTF-8;
+jdbc.username=
+jdbc.password=
