메이븐 플러그인추가
서버에서 빌드시 웹프로젝트 형식으로 빌드되지 않아 메이븐플러그인 추가

--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,13 @@
 					<encoding>UTF-8</encoding> 
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<configuration>
+					<webappDirectory>../deploy</webappDirectory>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
