메이븐 플러그인 수정
빌드 결과물을 현재 디렉토리로 오도록 수정

--- a/pom.xml
+++ b/pom.xml
@@ -194,7 +194,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
-					<webappDirectory>../deploy</webappDirectory>
+					<webappDirectory>./deploy</webappDirectory>
 				</configuration>
 			</plugin>
 		</plugins>
